--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -1,4 +1,3 @@
-/* Estilos generales */
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -6,18 +5,20 @@
   padding: 12px 24px;
   background-color: #fff;
   border-bottom: 4px solid #00138C;
-  border-left: 4px solid #00138C;
-  border-right: 4px solid #00138C;
   height: 100px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   transition: all 0.3s ease;
 }
 
-/* Logo y título */
 .header-left {
   display: flex;
   align-items: center;
   gap: 16px;
+}
+
+.menu-btn mat-icon {
+  font-size: 28px;
+  color: #00138C;
 }
 
 .logo {
@@ -39,7 +40,6 @@
   margin-top: 4px;
 }
 
-/* Iconos y usuario */
 .header-right {
   display: flex;
   align-items: center;
