--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
   <!-- Columna izquierda con formulario -->
   <div class="login-left">
     <div class="login-content">
-      <img src="Logo-Universidad-del-Cauca-vertical-1.png" 
+      <img src="assets/images/Logo-Universidad-del-Cauca-vertical-1.png" 
            alt="Logo Universidad del Cauca" 
            class="login-logo">
 
@@ -44,6 +44,6 @@
   <!-- Columna derecha con mural -->
   <div class="login-right">
     <div class="overlay"></div>
-    <img src="Pintura-FIET.jpg" alt="Mural Universidad del Cauca" class="login-image">
+    <img src="assets/images/Pintura-FIET.jpg" alt="Mural Universidad del Cauca" class="login-image">
   </div>
 </div>
