--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,3 +1,4 @@
+<!-- sidebar.component.html -->
 <nav [class.closed]="!isSidebarOpen" class="sidebar">
   <ul>
     <li *ngFor="let item of menuItems">
