Se modifico el login para consumir el back

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -21,8 +21,8 @@
     </button>
 
     <div class="user-info">
-      <div class="user-name">Funcionario FIET</div>
-      <div class="user-email">decafiet&#64;unicauca.edu.co</div>
+      <div class="user-name">{{ userName }}</div>
+      <div class="user-email">{{ userEmail }}</div>
     </div>
   </div>
 </header>
