--- a/src/app/shared/components/request-status/request-status.component.html
+++ b/src/app/shared/components/request-status/request-status.component.html
@@ -23,6 +23,21 @@
     </td>
   </ng-container>
 
+  <!-- Acciones -->
+  <ng-container matColumnDef="acciones">
+    <th mat-header-cell *matHeaderCellDef> Oficio/Resolución </th>
+    <td mat-cell *matCellDef="let element">
+      <a *ngIf="element.oficioUrl"
+         [href]="element.oficioUrl"
+         download
+         mat-raised-button
+         color="primary">
+        <mat-icon>download</mat-icon> Descargar
+      </a>
+      <span *ngIf="!element.oficioUrl">No disponible</span>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
